--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,14 @@
     --text-color: #000;
     --main-color: #f97316;
     --background-color: 255, 255, 255;
+    --transition-time: 0.3s;
 }
 
 html {
     scroll-behavior: smooth;
+}
+a, button {
+    transition: var(--transition-time) ease-in;
 }
 
 body {
